Revert "workin it"

--- a/client/src/scss/login.scss
+++ b/client/src/scss/login.scss
@@ -144,7 +144,7 @@ $lightgreenish: #C5D86D;
 }
 }
 
-.loginForm{
+.form-control{
   @include smaller;
-  font-size: 15px!important;
+  font-size: 15px;
 }
